solved the exception, made operation when entering or deleting a character