@@ -14,6 +14,7 @@
     <packaging>jar</packaging>
 
     <properties>
+        <javafx-sdk>D:/openjfx-17.0.15_windows-x64_bin-sdk/javafx-sdk-17.0.15</javafx-sdk>
         <java.version>11</java.version>
         <javafx.version>17.0.1</javafx.version>
     </properties>
@@ -62,25 +63,19 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.5</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>3.1.0</version>
+            <configuration>
+                <mainClass>app.Main</mainClass>
+                <commandlineArgs></commandlineArgs>
+                <arguments>
+                <argument>--module-path</argument>
+                <argument>${javafx-sdk}/lib</argument>
+                <argument>--add-modules</argument>
+                <argument>javafx.controls,javafx.fxml</argument>
+                </arguments>
+            </configuration>
             </plugin>
         </plugins>
     </build>
